apps/budo/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budo-app
  namespace: budo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budo-app
  template:
    metadata:
      labels:
        app: budo-app
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: budo-app

      containers:
      - name: budo-app
        image: ghcr.io/harris-consult/budo-app:latest
        ports:
        - containerPort: 5000
