apps/budo/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budo-app
  namespace: budo
spec:
  selector:
    app: budo-app
  ports:
  - port: 80
    targetPort: 3000
